data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_421.wast
;; 2. **Test Description:**    - Implement a nested loop where the innermost loop uses `br_if` with a condition that should frequently result in the branch being taken. The test should verify correct stack unwinding upon branching.    - **Constraint:** This test validates operand stack management and whether the `br` instruction correctly manipulates the operand stack, preventing infinite loops.

(assert_invalid
  (module
    (func (result i32)
      (block
        (loop (result i32)
          (block (result i32)
            (br_if 1 (i32.const 1) (i32.const 42)) ;; unncessary additional argument for br_if
          )
        )
      )
    )
  )
  "type mismatch"
)